2008-07-28 [holger]	0.17cvs3

	* .cvsignore
		More files to ignore
	* src/notification_trayicon.c
		Port trayicon popup menu to GtkUIManager
		Heavily inspired by the trayicon plugin port (3.5.0cvs34)

2008-07-07 [holger]	0.17cvs2

	* src/notification_banner.c
		Don't lock mutex during gtk main loop iterations

2008-07-02 [wwp]	0.17cvs1

	* src/notification_foldercheck.c
		Fix compilation with older GTKs.

2008-06-27 [paul]	0.17

	0.17 released

2008-06-27 [paul]	0.16cvs7

	* po/fi.po
	* po/pt_BR.po
		updated by Flammie Pirinen and Frederico
		Goncalves Guimaraes

2008-06-16 [holger]	0.16cvs6

	* src/notification_prefs.c
		Add comment to translators about "toast".

2008-06-12 [holger]	0.16cvs5

	* src/notification_foldercheck.c
		Obey tree view prefs. Patch by wwp.

2008-05-26 [holger]	0.16cvs4

	* configure.ac
	* src/notification_plugin.c
		Update icons dynamically on theme change.
		Patch heavily inspired by 3.4.0cvs70 of main
		(on which this plugin now depends)

2008-05-25 [holger]	0.16cvs3

	* src/notification_foldercheck.c
		Maybe fix adjustment jumping around in
		foldercheck window

2008-05-25 [holger]	0.16cvs2

	* .cvsignore
		More files to ignore
	* src/notification_foldercheck.c
		Close foldercheck dialog on ESC

2008-04-21 [colin]	0.16cvs1

	* po/fr.po
		Fix an ugly translation

2008-04-18 [paul]	0.16

	0.16 released

	* po/fr.po
		added by wwp

	* po/fi.po
	* po/it.po
	* po/pt_BR.po
		updated by Flammie Pirinen, Andrea Spadaccini and
		Frederico Goncalves Guimaraes

2008-03-15 [colin]	0.15cvs8

	* src/notification_core.c
	* src/notification_core.h
	* src/notification_popup.c
	* src/notification_trayicon.c
		Factorize mainwindow show code, and fix
		folderview's scroll like in Trayicon

2008-03-12 [colin]	0.15cvs7

	* configure.ac
		Enable -Wall

2008-03-05 [holger]	0.15cvs6

	* src/notification_trayicon.c
		Fix trayicon when compiled without
		libnotify.

2008-02-25 [holger]	0.15cvs5

	* src/notification_plugin.c
	* src/notification_trayicon.c