@@ -105,3 +105,4 @@
 ( cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/notification_foldercheck.c;  ) > 0.17cvs1.patchset
 ( cvs diff -u -r 1.1.2.9 -r 1.1.2.10 src/notification_banner.c;  ) > 0.17cvs2.patchset
 ( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 .cvsignore;  cvs diff -u -r 1.1.2.16 -r 1.1.2.17 src/notification_trayicon.c;  ) > 0.17cvs3.patchset
+( cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/notification_banner.c;  ) > 0.17cvs4.patchset
